# rust-blog

./: Cargo.toml  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: post_handler.rs
app/: Cargo.toml
app/src/post/: read.rs
domain/: Cargo.toml
domain/src/: models.rs
infra/: Cargo.toml
infra/src/: lib.rs  schema.rs
shared/src/: response_models.rs
